fix:working on the website to work on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,10 @@ a {
   width:70%;
 }
 
+.icon{
+  display: none;
+}
+
 .box-side{
   background-color: var(--primary-color);
   color: white;
@@ -193,4 +197,19 @@ input[type='text']{
   width: 100%;
   margin-top:20px;
   padding:20px;
+  
+}
+
+@media(max-width:600px){
+  .logo{
+    text-align: center;
+  }
+  .login{
+    display: none;
+  }
+  .icon{
+    display: block;
+    padding: 20px;
+    color: var(--primary-color);
+  }
 }
